# ccgovern

./: CCGovern.command  LICENSE  PRICING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ccgovern/: __init__.py  config.py  fulfillment.py  license.py
src/ccgovern/collector/: cli.py  jsonl_fallback.py  jsonl_parser.py  pricing.py  reporter.py  stats_cache_parser.py
src/ccgovern/demo/: seed.py
src/ccgovern/models/: governance.py  report.py  usage.py
src/ccgovern/server/: aggregate.py  alerts.py  budget.py  export.py  http_sync.py  ingest.py  policy.py  reporter.py  store.py
src/ccgovern/tui/: app.py  app.tcss
src/ccgovern/tui/widgets/: base.py  budget_view.py  developer_view.py  modals.py  policy_view.py  team_view.py
src/ccgovern/util/: atomic_io.py  ed25519.py
tests/: test_core.py  test_fallback_alerts.py  test_fulfillment.py  test_license.py  test_sync_export.py
